[gd_scene load_steps=3 format=3 uid="uid://clmkfdsfpboj7"]

[ext_resource type="Script" uid="uid://7yu3o86amnjh" path="res://action_bar/action_bar_ui/ActionBarUI.gd" id="1_mhvxe"]
[ext_resource type="PackedScene" uid="uid://kg7ju7f63mak" path="res://action_bar/action_bar_ui/action_bar_slot_ui.tscn" id="2_g20hy"]

[node name="ActionBarUI" type="PanelContainer"]
size_flags_horizontal = 6
size_flags_vertical = 8
script = ExtResource("1_mhvxe")

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ActionBarSlots" type="HBoxContainer" parent="Margins"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Slot1" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot2" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot3" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot4" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot5" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot6" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot7" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot8" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot9" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2

[node name="Slot0" parent="Margins/ActionBarSlots" instance=ExtResource("2_g20hy")]
unique_name_in_owner = true
layout_mode = 2
